--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@chakra-ui/react": "^2.8.0",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@vercel/analytics": "^1.0.2",
     "framer-motion": "^10.15.2",
     "is-ios": "^2.1.1",
     "react": "^18.2.0",
